@@ -1,3 +1,11 @@
+From 08df256 (BSP_PS_errorbar):
+==============================
+
+In prisim/bispectrum_phase.py,
+
+(*) Start work on producing incoherent average of power spectrum
+through function incoherent_cross_power_spectrum_average()
+
 From 6a887cb (BSP_PS_errorbar):
 ==============================
 
